# kcs-content-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.toml.bk
src/: actix_api.rs  admins_handler.rs  categories.rs  db_handler.rs  file_handler.rs  file_property.rs  main.rs  tools.rs
src/actix_api/: admins_handler.rs  categories.rs  db_handler.rs  file_handler.rs
src/actix_api/admins_handler/: add_admin.rs  delete_admin.rs  edit_admin.rs  query_admin.rs
src/actix_api/db_handler/: migrations.rs  tbl_admins_handler.rs  tbl_contents_handler.rs
src/actix_api/file_handler/: delete_api.rs  query_api.rs  serve_api.rs  upload_api.rs
src/admins_handler/: add_admin.rs  delete_admin.rs  edit_admin.rs  login_api.rs  query_admin.rs
src/db_handler/: migrations.rs  tbl_admins_handler.rs  tbl_contents_handler.rs
src/file_handler/: delete_api.rs  query_api.rs  serve_api.rs  upload_api.rs
